# diysh

./: Cargo.toml  LICENSE  README.md
src/: commands.rs  error.rs  inout.rs  lib.rs  shell.rs  tests.rs
src/commands/: argument.rs  definition.rs  instance.rs  status.rs
src/inout/: log.rs  read.rs  throw.rs
src/shell/: prompt.rs
tests/: shell.rs
