[package]
name = "diysh"
authors = [ "Harrisonn <j.h.m.t.v.10@gmail.com>" ]
version = "1.0.1"
edition = "2021"

description = "The Do-It SHell is a library that lets you create your own shell-like text interface"

repository = "https://github.com/OJarrisonn/dish"
readme = "README.md"

license = "MIT"
license-file = "LICENSE"

keywords = [ "terminal", "tui", "shell" ]
categories = [ "command-line-interface" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.1"
