[package]
name = "diysh"
authors = [ "Harrisonn <j.h.m.t.v.10@gmail.com>" ]
version = "2.1.3"
edition = "2021"

description = "The Do-It-Yourself SHell is a library that lets you create your own shell-like text interface"

repository = "https://github.com/OJarrisonn/diysh"
readme = "README.md"

license = "MIT"
license-file = "LICENSE"

keywords = [ "terminal", "tui", "shell" ]
categories = [ "command-line-interface" ]

exclude = ["/src/tests.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
regex = "1.9.1"


[[test]]
name = "shell"